testsuite/tests/linear/should_fail/LinearErrOrigin.stderr
LinearErrOrigin.hs:9:7: error: [GHC-25897]
    • Couldn't match type ‘p’ with ‘q’ arising from multiplicity of ‘x’
      ‘p’ is a rigid type variable bound by
        the type signature for:
          foo :: forall a (p :: Multiplicity) b (q :: Multiplicity).
                 (a %p -> b) -> a %q -> b
        at LinearErrOrigin.hs:8:1-67
      ‘q’ is a rigid type variable bound by
        the type signature for:
          foo :: forall a (p :: Multiplicity) b (q :: Multiplicity).
                 (a %p -> b) -> a %q -> b
        at LinearErrOrigin.hs:8:1-67
    • In an equation for ‘foo’: foo f x = f x
    • Relevant bindings include
        f :: a %p -> b (bound at LinearErrOrigin.hs:9:5)
        foo :: (a %p -> b) -> a %q -> b (bound at LinearErrOrigin.hs:9:1)

